# Media-Codec-Pipeline

./: CMakeLists.txt  README.md
FFmpegHardCodec/: DecEncInterface.h
FFmpegHardCodec/Decoder/: AACDecoder.cpp  AACDecoder.h  HardDecoder.cpp  HardDecoder.h  SoftDecoder.cpp
FFmpegHardCodec/Encoder/: AACEncoder.cpp  AACEncoder.h  H264DVPPEncoder.cpp  H264HardEncoder.cpp  H264HardEncoder.h  H264SoftEncoder.cpp
FFmpegHardCodec/Encoder/dvpp_enc/: sample_api.h  sample_looper.cpp  sample_looper.h
HardCodec/Decoder/: AACDecoder.cpp  AACDecoder.h  DVPPDecoder.cpp  HardDecoder.cpp  HardDecoder.h  SoftDecoder.cpp
HardCodec/Encoder/: AACEncoder.cpp  AACEncoder.h
HardCodec/Encoder/dvpp_enc/: sample_comm.h  sample_encoder.cpp  sample_encoder.h  sample_encoder_manage.cpp
Log/: log_helpers.h
Media/MediaCommon/: AAC.h
Media/MediaMuxer/: MediaMuxer.cpp  MediaMuxer.h
MediaCommon/: AAC.cpp  AAC.h  TypeDef.h
MediaMuxer/: MediaMuxer.cpp  MediaMuxer.h  remuxer.c
MediaReader/: MediaInterface.h  MediaReader.cpp  MediaReader.h
MediaReader/RtspReader/: rtsp_client.cpp
Test/: main.cpp
Warpper/: MediaWrapper.cpp  MediaWrapper.h
